<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/uebwxkhc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_gravity="end"
                android:gravity="end"
                android:textSize="15sp"
                android:id="@+id/uebwxkhc"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/uebwxkhc" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/jnhoriqi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_gravity="center_horizontal"
                android:gravity="end"
                android:id="@+id/jnhoriqi"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/jnhoriqi" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/uebwzsjx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_gravity="end"
                android:gravity="end"
                android:id="@+id/uebwzsjx"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/uebwzsjx" />
        </LinearLayout>
        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:paddingLeft="3dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:textSize="15sp"
                android:id="@+id/djjx"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="30dp"
                android:hint="@string/uebwdjjx" />
            <TextView
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:textSize="15sp"
                android:id="@+id/uull"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="30dp"
                android:hint="@string/uebwuull" />

        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>